--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-etherscan": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
-    "@openzeppelin/contracts": "^3.1.0",
+    "@openzeppelin/contracts": "^3.4.0",
     "@openzeppelin/test-helpers": "^0.5.6",
+    "dotenv": "^8.2.0",
     "ethereum-cryptography": "^0.1.3",
     "ethereum-waffle": "^3.0.2",
     "ethers": "^5.0.17"
